app/assets/stylesheets/layout.css.scss
#content {min-height:500px;}
.main {height:530px;}

.foot {border-top:1px solid;height:200px;padding:5px;clear:both;}
.foot li a {color:#0066CC}
.address {color:#0066CC}
.whitespace {white-space:pre;}
.cartItem {border-bottom:1px solid #ccc;padding:2px;margin:1px;}
.tnav .navbar .container .navbar-default { height: 28px; }
.head {text-align:right;padding-top:0px;height:120px;background:url("/assets/springBack.jpg");background-size:100% 390px; background-position:0px 70%;}
.head img {max-width:350px;margin:2px;height:115px;}
.loggedIn {color:#557;margin-top:15px;}
.navbar {margin-bottom:5px;}
.panel-body {padding-bottom:2px;}

.navbar{
    background-color:white;
    color:#00AAFF;
    border-radius:0;
}

.navbar .navbar-nav > li > a {
    color:#0066CC;
}

.navbar .navbar-brand {
    color:#eeeeee;
}

.navbar .navbar-nav > li > a:hover {
    background-color:#eee;
    color:#0AF;
}


.form-signin-heading {color: #48E;}
#register {padding:3px; margin:1px;}
body {padding-top:0px;} 
.hero-unit {
  background-color: white;
  border-radius: 6px 6px 6px 6px;
  border: 1px solid #ddd;
  color: inherit;
  font-size: 18px;
  font-weight: 200;
  margin-bottom: 10px;
  padding: 20px;
}

.fl {height:75px;background:white;position:relative;}
.addy p{margin-top:10px;}
.logo {margin-left:-30px;}
#productList {height:500px;overflow:auto;}
#myCarousel {margin-top:0px;margin-bottom:10px;}
#specials {height: 350px; }
.loginHead {color:#003377}
.loginPage {background:url("/assets/chestRugs.jpg"); background-position:0% 0%;background-size:180% 180%;height:500px;}
.loginBack {position:absolute;width:95%;border-radius:3px;z-index:0;border:1px solid white;margin:10px;background:white;opacity:0.5;height:265px;}
.new_user {padding-top:20px;padding-left:5px;}
.createUserBtn {margin-bottom:15px;margin-left:5px;}
.notice {position:relative;top:-20px;min-height:55px;width:100%;z-index:10;margin:10px;border-radius:3px;color: white;font-size:18px;background-color:#68A;}
.loginNotice {position:relative;z-index:10;top:15px;color:#A00;font-size:16px;}
.notice li {list-style:square;clear:both;}
.updated {background:#EEEAE3;}

.carousel-inner > .item > img, .carousel-inner > .item > a > img {
   max-height:380px;
   width:100%;
}

.image {width:100%;}
.image img {width:100%;min-height:330px;}
//Websocket Messages
.message {color:white;background:#224;width: 350px;height:200px;padding:5px;border:1px solid #DDD;margin:2px;border-radius:5px;float:left;position:absolute;z-index:100;margin-left:4%;}
.message .messageHead {margin:2px;text-align:right;height:15px;}
.message .messageBody a {color: #5AF;}

